# arm64-ue-modloader

./: .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml
docs/: BLUEPRINT_ANALYSIS.md  DEBUG_MENU_API_ANALYSIS.md  DEBUG_MENU_COMPLETE_ANALYSIS.md  DEBUG_MENU_REBUILD_PLAN.md  DEBUG_MENU_REDESIGN.md  LUA_API.md  UNCOOK_PIPELINE.md
docs/assets/: README.md
examples/HelloWorld/: main.lua
examples/NativeHook/: main.lua
examples/PropertyHook/: main.lua
examples/SimpleToggle/: main.lua
examples/SubMenuMod/: main.lua
installer/: Cargo.toml
installer/src/: adb.rs  main.rs  pipeline.rs  signer.rs  smali.rs
lsposed_module/: build.gradle  build_lsposed.bat  local.properties  settings.gradle
lsposed_module/app/: build.gradle
modloader/: CMakeLists.txt  build.bat  build.sh
modloader/include/modloader/: adb_bridge.h  aes_extractor.h  auto_offsets.h  class_rebuilder.h  config.h  crash_handler.h  engine_versions.h  game_profile.h  init.h  logger.h  lua_bindings.h  lua_delayed_actions.h  (+23 more)
modloader/src/: main.cpp
paks/re4/: DebugMenu_P.pak
tools/: analyze_datatable.py  build_debug_pak.py  deploy.py  dump_uasset.py  extract_paks.py  kismet_decompiler.py  uncook.py
wiki/: Architecture.md  Creating-Mods.md  Debug-Menu-API.md  Getting-Started.md  Home.md  Lua-API-Reference.md  Porting-Guide.md  README.md  Troubleshooting.md
(+66 files in other folders)
